# tw-stock-auto-select-system

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: pages-static-refresh.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/: routes.py  schemas.py
backend/app/data/: __init__.py  sample_market.py
backend/app/domain/: __init__.py  models.py  screener.py
backend/app/repositories/: memory.py
backend/app/services/: billing.py  market_data.py  notifications.py
backend/app/workers/: scheduler.py
backend/tests/: test_api.py  test_screener.py
config/: risk_profile.json  screening_rule.json
docs/: github-pages-deploy.md  trader-review-gate.md
frontend/: Dockerfile  next.config.mjs  package-lock.json  package.json  tsconfig.json  types.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: api.ts
frontend/public/: manifest.webmanifest
frontend/public/data/: history.json
frontend/public/data/runs/: 095a5f7a-7df4-4395-8cfd-7e0ce5b5aa4a.json  3f9500ab-6b37-47e1-8faa-c92ff3b2f7bf.json  ae2cfb14-cd68-43f0-8374-3fb63eac46b8.json  cd4123cc-e8b9-409b-b06f-30dca47ca554.json
frontend/scripts/: check-compliance-copy.mjs  locked-next-build.mjs
infra/: deployment-notes.md  schema.sql
scripts/: check-runtime.ps1  generate-static-feed.py  start-local.ps1
